@@ -4019,8 +4019,6 @@
 					HAVE_TK_CONFIG_H,
 					TCL_NO_DEPRECATED,
 					HAVE_TCL_CONFIG_H,
-					TCL_TOMMATH,
-					"MP_PREC=4",
 					"${GCC_PREPROCESSOR_DEFINITIONS}",
 				);
 				GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = NO;
@@ -4157,8 +4155,6 @@
 					HAVE_TK_CONFIG_H,
 					TCL_NO_DEPRECATED,
 					HAVE_TCL_CONFIG_H,
-					TCL_TOMMATH,
-					"MP_PREC=4",
 					"${GCC_PREPROCESSOR_DEFINITIONS}",
 				);
 				GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = NO;
@@ -4230,8 +4226,6 @@
 					HAVE_TK_CONFIG_H,
 					TCL_NO_DEPRECATED,
 					HAVE_TCL_CONFIG_H,
-					TCL_TOMMATH,
-					"MP_PREC=4",
 					"${GCC_PREPROCESSOR_DEFINITIONS}",
 				);
 				GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = NO;
@@ -4303,8 +4297,6 @@
 					HAVE_TK_CONFIG_H,
 					TCL_NO_DEPRECATED,
 					HAVE_TCL_CONFIG_H,
-					TCL_TOMMATH,
-					"MP_PREC=4",
 					"${GCC_PREPROCESSOR_DEFINITIONS}",
 				);
 				GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = NO;
